<resources>
    <string name="app_name">Calculator</string>
    <string name="_0result">0</string>
    <string name="ac">AC</string>
    <string name="brackets">( )</string>
    <string name="percentage">%</string>
    <string name="clear">C</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="mutiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="point">.</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
</resources>