<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/solutionValue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:textSize="35sp"
        android:textColor="@color/white"
        android:layout_above="@id/mainValue"
        android:textAlignment="textEnd"/>

    <TextView
        android:id="@+id/mainValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0result"
        android:textSize="65sp"
        android:textColor="@color/white"
        android:layout_above="@id/Linear_Button"
        android:textAlignment="textEnd"/>

    <LinearLayout
        android:id="@+id/Linear_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/allClearButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="#F4511E"
                android:text="@string/ac"
                android:textSize="20sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bracketButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="#F4511E"
                android:text="@string/brackets"
                android:textSize="30sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/percentButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="#F4511E"
                android:text="@string/percentage"
                android:textSize="30sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="#F4511E"
                android:text="@string/clear"
                android:textSize="30sp"
                app:cornerRadius="38dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sevenButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:text="@string/_7"
                android:textSize="30sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eightButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:text="@string/_8"
                android:textSize="30sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nineButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:text="9"
                android:textSize="30sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiplyButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="#F4511E"
                android:text="@string/mutiply"
                android:textSize="30sp"
                app:cornerRadius="38dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fourButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:text="@string/_4"
                android:textSize="30sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fiveButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:text="@string/_5"
                android:textSize="30sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sixButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:text="@string/_6"
                android:textSize="30sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minusButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="#F4511E"
                android:text="@string/minus"
                android:textSize="30sp"
                app:cornerRadius="38dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/oneButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:text="@string/_1"
                android:textSize="30sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/twoButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:text="@string/_2"
                android:textSize="30sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/threeButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:text="@string/_3"
                android:textSize="30sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="#F4511E"
                android:text="@string/add"
                android:textSize="30sp"
                app:cornerRadius="38dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dotButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:text="@string/point"
                android:textSize="30sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zeroButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:text="@string/_0result"
                android:textSize="30sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divideButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/design_default_color_secondary_variant"
                android:text="@string/divide"
                android:textSize="30sp"
                app:cornerRadius="38dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equalButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_margin="10dp"
                android:backgroundTint="#F4511E"
                android:text="@string/equals"
                android:textSize="30sp"
                app:cornerRadius="38dp" />


        </LinearLayout>

    </LinearLayout>



</RelativeLayout>